eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-store-api-deployment
  labels:
    app: apple-store-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apple-store-api
  template:
    metadata:
      labels:
        app: apple-store-api
    spec:
      containers:
        - name: apple-store-api
          image: 210256638564.dkr.ecr.ap-southeast-1.amazonaws.com/apple_store:latest
          ports:
            - containerPort: 8080
