eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apple-store-api-service
spec:
  selector:
    app: apple-store-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
