eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apple-store-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: "e-cart.publicvm.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: apple-store-api-service
                port:
                  number: 80
  tls:
    - hosts:
        - api.e-cart.publicvm.com
      secretName: apple-store-api-cert
